[#1737] fixed the double scrollbar and added structure to vis. selector

--- a/client/src/components/common/ConfigMenu/ConfigMenuSection.scss
+++ b/client/src/components/common/ConfigMenu/ConfigMenuSection.scss
@@ -5,7 +5,7 @@
   border: 1px solid $lightGrey;
   @include border-radius(6px);
   margin-bottom: 15px;
-  padding: 15px 15px 0 15px;
+  padding: 15px 0 0 15px;
 
   h3 {
     font-size: 1.1em;
