--- a/client/src/components/common/ConfigMenu/ConfigMenuSectionOptionThumbs.scss
+++ b/client/src/components/common/ConfigMenu/ConfigMenuSectionOptionThumbs.scss
@@ -9,7 +9,8 @@
   @include border-radius(8px);
   margin-right: 10px; 
   text-decoration: none;
-  
+  border: 1px solid rgba($lightBlueGrey, 0);
+  background-color: rgba($lightBlueGrey, 0.3);
   img {
     width: 32px;
     height: 32px;
@@ -22,6 +23,7 @@
   }
 
   &--selected {
-    border: 1px solid $anchorLinkLight;
+    border: 1px solid rgba($anchorLinkLight, 0.3);
+    background-color: rgba($anchorLinkLight, 0.1);
   }
 }
